deployment/service.yml
apiVersion: v1
kind: Service
metadata:
  name: server
spec:
  ports:
    - nodePort: 30006
      port: 80
      targetPort: 80
  selector:
    app: server
  type: NodePort
