deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  # tls:
  # - hosts:
  #     - hw.problemsolving.top
  #   secretName: tls
  rules:
  - host: hw.problemsolving.top
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: server
            port:
              number: 80
      - path: /swagger
        pathType: Prefix
        backend:
          service:
            name: server
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
